# grus

./: CHANGELOG.md  Cargo.toml  README.md
docs/: grus.1.scd
src/: actions.rs  app.rs  flattree.rs  global.rs  lib.rs  main.rs  node.rs  parser.rs  store.rs  svc.rs  tvc.rs
src/ui/: mod.rs  session.rs  status.rs  tree.rs
tests/: actions.rs
