[package]
name = "grus"
version = "0.1.0"
authors = ["Rishabh Das <rdas@tutanota.com>"]
edition = "2021"
description = "A hierarchical task manager for the terminal"
license = "MIT"
repository = "https://github.com/metent/grus"
keywords = ["tui", "productivity", "todo", "todo-list", "tree"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
crossterm = "0.26.1"
dirs = "5.0.1"
grus-lib = "0.1.0"
sanakirja = "1.3.3"
thiserror = "1.0.43"
winnow = "0.5.0"
